=head1 Changes in DBD-Oracle 1.21(svn rev xxxx) 
  Changed the way pre-fetching is done by John Scoles
  Added support for Scollable cursors from John Scoles
  Changed the max size of cache_rows to a ub4 rather than a ub2 from John Scoles
  Added support for Lobs in select of OCI Embedded Objects from John Scoles with a big thankyou to  Paul Weiss 
  Fixed for embedded object in object from Paul Weiss
  Added support for direct insert of large XML data into XMLType fields from Hendrik Fuss
  Fixed memory leak (not releasing Temp Lob with OCILobFreeTemporary) when created for a bind from John Scoles
  Added suppot for bind_param_inout_array with use with execute_array from John Scoles
  Added enhancement for Embedded Objects handling from Paul G. Weiss
  Fixed to Makefile.PL let it read makefiles from other makes from Alexander V Alekseev
  Updated POD to tell users to Avoid Using "SQL Call" from Charles Jardine   
  Updated POD to account for rt.cpan.org #30910: "DBD-Oracle crashes when trying to read empty LOB" By John Scoles
  
=head1 Changes in DBD-Oracle 1.20(svn rev 10517) 11th January 2008

  Fixed lob test so it skips the one test that relies on it if v$ session. from Rafael Kitover 
  Fixed // with /* */ in dbdimp.c from John Scoles
  Fixed for execute_for_fetch in Oracle.pm returning 0 instead of 0E0.  from Martin J. Evans
  Added README.64bit.txt that contains help for compiling on 64 bit boxes from John Scoles
  Fixed typo in Oracle.pm from Tom R.
  Added support for ora_charset, ora_ncharset from Stephen J. Smith
  Fixed Makefile.PL for better handling of empty array in File::Find::find from Slaven Rezic
  Fixed references to README.clients.txt in Makefile.PL from  John Scoles
  Added PERL_NO_GET_CONTEXT for better multi-threaded support from John Scoles
  Changed required version of DBI to be 1.51 from John Scoles
  Fixed bug in 31lob.t from John Scoles
  Added notes on installing Instantclient .rpm to README.Lunix.txt